# Escultor3d

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cutbox.cpp  cutbox.h  cutellipsoid.cpp  cutellipsoid.h  cutsphere.cpp  cutsphere.h  cutvoxel.cpp  cutvoxel.h  escultor3D  figurageometrica.cpp  figurageometrica.h  main.cpp  putbox.cpp  putbox.h  putellipsoid.cpp  putellipsoid.h  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  readfile.cpp  readfile.h  sculptor.cpp  sculptor.h
html/: annotated.html  classCutBox-members.html  classCutBox.html  classCutBox__coll__graph.map  classCutBox__coll__graph.md5  classCutEllipsoid-members.html  classCutEllipsoid.html  classCutEllipsoid__coll__graph.md5  classCutEllipsoid__inherit__graph.map  classCutSphere-members.html  classCutSphere.html  classCutSphere__coll__graph.md5  classCutSphere__inherit__graph.map  classCutVoxel-members.html  classCutVoxel.html  classCutVoxel__coll__graph.md5  classCutVoxel__inherit__graph.map  classFiguraGeometrica-members.html  classFiguraGeometrica.html  classFiguraGeometrica__inherit__graph.map  classFiguraGeometrica__inherit__graph.md5  classPutBox-members.html  classPutBox.html  classPutBox__coll__graph.map  classPutBox__coll__graph.md5  classPutEllipsoid-members.html  classPutEllipsoid.html  classPutEllipsoid__coll__graph.map  classPutEllipsoid__coll__graph.md5  classPutSphere-members.html  classPutSphere.html  classPutSphere__coll__graph.map  classPutSphere__coll__graph.md5  classPutVoxel-members.html  classPutVoxel.html  classPutVoxel__coll__graph.map  classPutVoxel__inherit__graph.md5  (+35 more)
(+27 files in other folders)
